tests/success/is_default_constructible_unresolved_type.bz
static_assert(__builtin_is_default_constructible(test_t));

struct test_t
{
}
