tests/error/move_global.bz
let i = 0;

function test()
{
	move i;
}
